--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ai-frontdesk-replica-kit</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="AI Frontdesk Replica - AI Powered Employee Assistant"  />
+    <meta name="author" content="vantum Ai" />
 
     <meta property="og:title" content="ai-frontdesk-replica-kit" />
     <meta property="og:description" content="Lovable Generated Project" />
