--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ai-frontdesk-replica-kit</title>
-    <meta name="description" content="AI Frontdesk Replica - AI Powered Employee Assistant"  />
+    <title>AI Employee Save Time and Money</title>
+    <meta name="description" content="AI Employee Save Time and Money "  />
     <meta name="author" content="vantum Ai" />
 
-    <meta property="og:title" content="ai-frontdesk-replica-kit" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AI Employee Save Time and Money" />
+    <meta property="og:description" content="AI Employee Save Time and Money" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
